Update example notebook

--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -1,28 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
+   "cell_type": "markdown",
+   "source": [
+    "# Examples"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload complete"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-20T20:09:35.669492857Z",
-     "start_time": "2023-07-20T20:09:35.625876906Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -96,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "outputs": [
     {
      "name": "stdout",
@@ -116,8 +112,43 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T20:09:40.772608112Z",
-     "start_time": "2023-07-20T20:09:39.444438965Z"
+     "end_time": "2023-07-20T21:09:52.620647616Z",
+     "start_time": "2023-07-20T21:09:51.420162736Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<spectral.io.envi.SpectralLibrary object at 0x7efd6954e280>\n",
+      "[0.02851183 0.02851183 0.02851183 0.02851183 0.02851183]\n",
+      "['Seawater_Coast_Chl_SW1']\n",
+      "[0.2051, 0.21310002, 0.2211, 0.2291, 0.2361]\n",
+      "[0.0080000004, 0.0080000004, 0.0080000004, 0.0070000002, 0.0060000001]\n",
+      "micrometer\n"
+     ]
+    }
+   ],
+   "source": [
+    "spec_lib = usgs_lib.load(\"Seawater_Coast_Chl_SW1\", resampling=\"measured\", format=\"spectral\")\n",
+    "\n",
+    "print(spec_lib)\n",
+    "print(spec_lib.spectra.flat[:5])\n",
+    "print(spec_lib.names)\n",
+    "print(spec_lib.bands.centers[:5])\n",
+    "print(spec_lib.bands.bandwidths[:5])\n",
+    "print(spec_lib.bands.band_unit)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-20T21:10:04.883354578Z",
+     "start_time": "2023-07-20T21:10:04.013440736Z"
     }
    }
   }
