Add ability to search by spectrum name

--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -24,8 +24,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:23:53.365919064Z",
-     "start_time": "2023-07-20T22:23:53.136448661Z"
+     "end_time": "2023-07-20T22:37:54.967556587Z",
+     "start_time": "2023-07-20T22:37:54.699049292Z"
     }
    }
   },
@@ -44,8 +44,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:23:55.180141087Z",
-     "start_time": "2023-07-20T22:23:53.230013841Z"
+     "end_time": "2023-07-20T22:37:56.680224552Z",
+     "start_time": "2023-07-20T22:37:54.799171168Z"
     }
    },
    "outputs": [],
@@ -92,8 +92,40 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:23:56.675388296Z",
-     "start_time": "2023-07-20T22:23:55.179949358Z"
+     "end_time": "2023-07-20T22:37:58.142939318Z",
+     "start_time": "2023-07-20T22:37:56.680016687Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Search for a spectrum name:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Antigorite+.2DryGrass_AMX26', 'Antigorite+.33DryGrass_AMX25', 'Cheatgrass_ANP92-11A', 'Cheatgrass_ANPC1_field_calib', 'Grass-FescueNeedlg_YNP-FN-1', 'Grass-FescueWheatg_YNP-FW-1', 'Grass-FescueWheatg_YNP-FW-2', 'Grass-FescueWheatg_YNP-FW-3', 'Grass-Smoothbrome_YNP-SB-1', 'Grass_AETR70_CA01-AETR-2_NPV', 'Grass_AETR95_CA01-AETR-1_NPV', 'Grass_CA01-TACA-1_meadow_NPV', 'Grass_Golden_Dry_GDS480', 'Grass_dry.4+.6green_AMX27', 'Grass_dry.5+.5green_AMX28', 'Grass_dry.6+.4green_AMX29', 'Grass_dry.7+.3green_AMX30', 'Grass_dry.8+.2green_AMX31', 'Grass_dry.83+.17NaMont_AMX35', 'Grass_dry.9+.1green_AMX32', 'LawnGrass_GDS91b_+1shf-unshf', 'LawnGrass_GDS91b_+1shft_3nm', 'LawnGrass_GDS91b_+const_1.0', 'LawnGrass_GDS91b_-shiftd_3nm', 'LawnGrass_GDS91b_shifted_3nm', 'Lawn_Grass_GDS91_green', 'Stonwll_Ply+.1grnGrass_AMX33', 'Stonwll_Ply+.2grnGrass_AMX34']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(usgs_lib.search_spectra(\"grass\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-20T22:37:58.152474270Z",
+     "start_time": "2023-07-20T22:37:58.143473157Z"
     }
    }
   },
@@ -108,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -125,15 +157,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:23:56.855790790Z",
-     "start_time": "2023-07-20T22:23:56.662548303Z"
+     "end_time": "2023-07-20T22:37:58.344483262Z",
+     "start_time": "2023-07-20T22:37:58.153376963Z"
     }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "Load a particular spectra with a chose resampling:"
+    "Load a particular spectrum with a chose resampling:"
    ],
    "metadata": {
     "collapsed": false
@@ -141,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -161,15 +193,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:23:58.108867556Z",
-     "start_time": "2023-07-20T22:23:56.856933179Z"
+     "end_time": "2023-07-20T22:37:59.474548768Z",
+     "start_time": "2023-07-20T22:37:58.355512454Z"
     }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "Load a spectrum as a `SpectralLibrary` from the [`spectral`](https://pypi.org/project/spectral/) distribution:"
+    "Load a spectrum as a [`SpectralLibrary`](https://www.spectralpython.net/class_func_ref.html#spectral.io.envi.SpectralLibrary) from the [`spectral`](https://pypi.org/project/spectral/) distribution:"
    ],
    "metadata": {
     "collapsed": false
@@ -177,13 +209,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<spectral.io.envi.SpectralLibrary object at 0x7f032f7e4a00>\n",
+      "<spectral.io.envi.SpectralLibrary object at 0x7f3414324880>\n",
       "[0.02851183 0.02851183 0.02851183 0.02851183 0.02851183]\n",
       "['Seawater_Coast_Chl_SW1']\n",
       "[0.2051, 0.21310002, 0.2211, 0.2291, 0.2361]\n",
@@ -205,8 +237,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:23:58.887438397Z",
-     "start_time": "2023-07-20T22:23:58.108176798Z"
+     "end_time": "2023-07-20T22:38:00.226564031Z",
+     "start_time": "2023-07-20T22:37:59.474788373Z"
     }
    }
   }
