Tweak examples and comments

--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -24,8 +24,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:37:54.967556587Z",
-     "start_time": "2023-07-20T22:37:54.699049292Z"
+     "end_time": "2023-07-20T22:54:34.662292125Z",
+     "start_time": "2023-07-20T22:54:34.313672970Z"
     }
    }
   },
@@ -44,8 +44,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:37:56.680224552Z",
-     "start_time": "2023-07-20T22:37:54.799171168Z"
+     "end_time": "2023-07-20T22:54:36.381598693Z",
+     "start_time": "2023-07-20T22:54:34.418023438Z"
     }
    },
    "outputs": [],
@@ -92,8 +92,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:37:58.142939318Z",
-     "start_time": "2023-07-20T22:37:56.680016687Z"
+     "end_time": "2023-07-20T22:54:37.839276454Z",
+     "start_time": "2023-07-20T22:54:36.380029389Z"
     }
    }
   },
@@ -114,18 +114,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Antigorite+.2DryGrass_AMX26', 'Antigorite+.33DryGrass_AMX25', 'Cheatgrass_ANP92-11A', 'Cheatgrass_ANPC1_field_calib', 'Grass-FescueNeedlg_YNP-FN-1', 'Grass-FescueWheatg_YNP-FW-1', 'Grass-FescueWheatg_YNP-FW-2', 'Grass-FescueWheatg_YNP-FW-3', 'Grass-Smoothbrome_YNP-SB-1', 'Grass_AETR70_CA01-AETR-2_NPV', 'Grass_AETR95_CA01-AETR-1_NPV', 'Grass_CA01-TACA-1_meadow_NPV', 'Grass_Golden_Dry_GDS480', 'Grass_dry.4+.6green_AMX27', 'Grass_dry.5+.5green_AMX28', 'Grass_dry.6+.4green_AMX29', 'Grass_dry.7+.3green_AMX30', 'Grass_dry.8+.2green_AMX31', 'Grass_dry.83+.17NaMont_AMX35', 'Grass_dry.9+.1green_AMX32', 'LawnGrass_GDS91b_+1shf-unshf', 'LawnGrass_GDS91b_+1shft_3nm', 'LawnGrass_GDS91b_+const_1.0', 'LawnGrass_GDS91b_-shiftd_3nm', 'LawnGrass_GDS91b_shifted_3nm', 'Lawn_Grass_GDS91_green', 'Stonwll_Ply+.1grnGrass_AMX33', 'Stonwll_Ply+.2grnGrass_AMX34']\n"
+      "['Aspen_Leaf-A_DW92-2', 'Aspen_Leaf-B_DW92-3', 'Blackbrush_ANP92-9A_leaves', 'Buckbrush_CA01-CECU-1_bush_1', 'Buckbrush_CA01-CECU-2_bush_2', 'Buckbrush_CA01-CECU-3_bush_3', 'Chamise_CA01-ADFA-1_bush_1', 'Chamise_CA01-ADFA-2_bush_2', 'Hyacinth_DWO-3-DEL-2_leaf.a', 'LeafySpurge_Spurge-A1-Jul98', 'LeafySpurge_Spurge-A1-Jun98', 'LeafySpurge_Spurge-A1-Oct97', 'LeafySpurge_Spurge-A1-Sep97', 'LeafySpurge_Spurge-A2-Jun98', 'LeafySpurge_Spurge-B1-Jul98', 'LeafySpurge_Spurge-B1-Oct97', 'LeafySpurge_Spurge-B2-Jul98', 'LeafySpurge_Spurge-B3-Jul98', 'LeafySpurge_Spurge-C1-Oct97', 'Manzanita_CA01-ARVI-1_bush_1', 'Manzanita_CA01-ARVI-2_bush_2', 'Manzanita_CA01-ARVI-3_bush_3', 'Manzanita_CA01-ARVI-4_bush_4', 'Manzanita_CA01-ARVI-5_bush_5', 'Manzanita_CA01-ARVI-6_bush_6', 'Manzanita_CA01-ARVI-7_leaves', 'Maple_Leaves_DW92-1', 'Oak_Oak-Leaf-1_fresh', 'Oak_Oak-Leaf-2_dried', 'Oak_QUDU_CA01-QUDU-1_bush_1', 'Oak_QUDU_CA01-QUDU-2_bush_2', 'Oak_QUDU_CA01-QUDU-3_bush_3', 'Sagebrush_Sage-Leaves-1_dry', 'Toyon_CA01-HEAR-1_bush', 'Walnut_Leaf_SUN_(Green)', 'Willow_Willow-Leaves-1_dry', 'Yerba_Santa_CA01-ERCA-1_bush', 'Yerba_Santa_CA01-ERCA-2_bush']\n"
      ]
     }
    ],
    "source": [
-    "print(usgs_lib.search_spectra(\"grass\"))"
+    "print(usgs_lib.search_spectra(\"bush|lea(f|ves)\"))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:37:58.152474270Z",
-     "start_time": "2023-07-20T22:37:58.143473157Z"
+     "end_time": "2023-07-20T22:54:37.849101278Z",
+     "start_time": "2023-07-20T22:54:37.839701638Z"
     }
    }
   },
@@ -157,8 +157,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:37:58.344483262Z",
-     "start_time": "2023-07-20T22:37:58.153376963Z"
+     "end_time": "2023-07-20T22:54:38.067782230Z",
+     "start_time": "2023-07-20T22:54:37.849340064Z"
     }
    }
   },
@@ -193,8 +193,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:37:59.474548768Z",
-     "start_time": "2023-07-20T22:37:58.355512454Z"
+     "end_time": "2023-07-20T22:54:39.258233397Z",
+     "start_time": "2023-07-20T22:54:38.079133994Z"
     }
    }
   },
@@ -215,7 +215,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<spectral.io.envi.SpectralLibrary object at 0x7f3414324880>\n",
+      "<spectral.io.envi.SpectralLibrary object at 0x7f9904fde700>\n",
       "[0.02851183 0.02851183 0.02851183 0.02851183 0.02851183]\n",
       "['Seawater_Coast_Chl_SW1']\n",
       "[0.2051, 0.21310002, 0.2211, 0.2291, 0.2361]\n",
@@ -237,8 +237,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:38:00.226564031Z",
-     "start_time": "2023-07-20T22:37:59.474788373Z"
+     "end_time": "2023-07-20T22:54:40.074860570Z",
+     "start_time": "2023-07-20T22:54:39.258765835Z"
     }
    }
   }
