--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -19,13 +19,15 @@
     "\n",
     "import pathlib\n",
     "\n",
+    "import numpy as np\n",
+    "\n",
     "import splib07"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:54:34.662292125Z",
-     "start_time": "2023-07-20T22:54:34.313672970Z"
+     "end_time": "2023-07-21T01:40:48.752196837Z",
+     "start_time": "2023-07-21T01:40:48.495210011Z"
     }
    }
   },
@@ -44,8 +46,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:54:36.381598693Z",
-     "start_time": "2023-07-20T22:54:34.418023438Z"
+     "end_time": "2023-07-21T01:40:50.605248212Z",
+     "start_time": "2023-07-21T01:40:48.688351895Z"
     }
    },
    "outputs": [],
@@ -92,8 +94,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:54:37.839276454Z",
-     "start_time": "2023-07-20T22:54:36.380029389Z"
+     "end_time": "2023-07-21T01:40:52.064074440Z",
+     "start_time": "2023-07-21T01:40:50.651887909Z"
     }
    }
   },
@@ -111,21 +113,21 @@
    "execution_count": 4,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Aspen_Leaf-A_DW92-2', 'Aspen_Leaf-B_DW92-3', 'Blackbrush_ANP92-9A_leaves', 'Buckbrush_CA01-CECU-1_bush_1', 'Buckbrush_CA01-CECU-2_bush_2', 'Buckbrush_CA01-CECU-3_bush_3', 'Chamise_CA01-ADFA-1_bush_1', 'Chamise_CA01-ADFA-2_bush_2', 'Hyacinth_DWO-3-DEL-2_leaf.a', 'LeafySpurge_Spurge-A1-Jul98', 'LeafySpurge_Spurge-A1-Jun98', 'LeafySpurge_Spurge-A1-Oct97', 'LeafySpurge_Spurge-A1-Sep97', 'LeafySpurge_Spurge-A2-Jun98', 'LeafySpurge_Spurge-B1-Jul98', 'LeafySpurge_Spurge-B1-Oct97', 'LeafySpurge_Spurge-B2-Jul98', 'LeafySpurge_Spurge-B3-Jul98', 'LeafySpurge_Spurge-C1-Oct97', 'Manzanita_CA01-ARVI-1_bush_1', 'Manzanita_CA01-ARVI-2_bush_2', 'Manzanita_CA01-ARVI-3_bush_3', 'Manzanita_CA01-ARVI-4_bush_4', 'Manzanita_CA01-ARVI-5_bush_5', 'Manzanita_CA01-ARVI-6_bush_6', 'Manzanita_CA01-ARVI-7_leaves', 'Maple_Leaves_DW92-1', 'Oak_Oak-Leaf-1_fresh', 'Oak_Oak-Leaf-2_dried', 'Oak_QUDU_CA01-QUDU-1_bush_1', 'Oak_QUDU_CA01-QUDU-2_bush_2', 'Oak_QUDU_CA01-QUDU-3_bush_3', 'Sagebrush_Sage-Leaves-1_dry', 'Toyon_CA01-HEAR-1_bush', 'Walnut_Leaf_SUN_(Green)', 'Willow_Willow-Leaves-1_dry', 'Yerba_Santa_CA01-ERCA-1_bush', 'Yerba_Santa_CA01-ERCA-2_bush']\n"
-     ]
+     "data": {
+      "text/plain": "['Aspen_Leaf-A_DW92-2',\n 'Aspen_Leaf-B_DW92-3',\n 'Blackbrush_ANP92-9A_leaves',\n 'Buckbrush_CA01-CECU-1_bush_1',\n 'Buckbrush_CA01-CECU-2_bush_2',\n 'Buckbrush_CA01-CECU-3_bush_3',\n 'Chamise_CA01-ADFA-1_bush_1',\n 'Chamise_CA01-ADFA-2_bush_2',\n 'Hyacinth_DWO-3-DEL-2_leaf.a',\n 'LeafySpurge_Spurge-A1-Jul98',\n 'LeafySpurge_Spurge-A1-Jun98',\n 'LeafySpurge_Spurge-A1-Oct97',\n 'LeafySpurge_Spurge-A1-Sep97',\n 'LeafySpurge_Spurge-A2-Jun98',\n 'LeafySpurge_Spurge-B1-Jul98',\n 'LeafySpurge_Spurge-B1-Oct97',\n 'LeafySpurge_Spurge-B2-Jul98',\n 'LeafySpurge_Spurge-B3-Jul98',\n 'LeafySpurge_Spurge-C1-Oct97',\n 'Manzanita_CA01-ARVI-1_bush_1',\n 'Manzanita_CA01-ARVI-2_bush_2',\n 'Manzanita_CA01-ARVI-3_bush_3',\n 'Manzanita_CA01-ARVI-4_bush_4',\n 'Manzanita_CA01-ARVI-5_bush_5',\n 'Manzanita_CA01-ARVI-6_bush_6',\n 'Manzanita_CA01-ARVI-7_leaves',\n 'Maple_Leaves_DW92-1',\n 'Oak_Oak-Leaf-1_fresh',\n 'Oak_Oak-Leaf-2_dried',\n 'Oak_QUDU_CA01-QUDU-1_bush_1',\n 'Oak_QUDU_CA01-QUDU-2_bush_2',\n 'Oak_QUDU_CA01-QUDU-3_bush_3',\n 'Sagebrush_Sage-Leaves-1_dry',\n 'Toyon_CA01-HEAR-1_bush',\n 'Walnut_Leaf_SUN_(Green)',\n 'Willow_Willow-Leaves-1_dry',\n 'Yerba_Santa_CA01-ERCA-1_bush',\n 'Yerba_Santa_CA01-ERCA-2_bush']"
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print(usgs_lib.search_spectra(\"bush|lea(f|ves)\"))"
+    "display(usgs_lib.search_spectra(\"bush|lea(f|ves)\"))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:54:37.849101278Z",
-     "start_time": "2023-07-20T22:54:37.839701638Z"
+     "end_time": "2023-07-21T01:40:52.077813947Z",
+     "start_time": "2023-07-21T01:40:52.064281512Z"
     }
    }
   },
@@ -157,8 +159,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:54:38.067782230Z",
-     "start_time": "2023-07-20T22:54:37.849340064Z"
+     "end_time": "2023-07-21T01:40:52.284553943Z",
+     "start_time": "2023-07-21T01:40:52.078210439Z"
     }
    }
   },
@@ -186,15 +188,15 @@
     }
    ],
    "source": [
-    "print(usgs_lib.load(\"Seawater_Coast_Chl_SW1\", resampling=\"measured\").size)\n",
-    "print(usgs_lib.load(\"Seawater_Coast_Chl_SW1\", resampling=\"oversampled\").size)\n",
-    "print(usgs_lib.load(\"Seawater_Coast_Chl_SW1\", resampling=\"cvASD\").size)"
+    "print(usgs_lib.load(\"Seawater_Coast_Chl_SW1\", resample=\"measured\")[0].size)\n",
+    "print(usgs_lib.load(\"Seawater_Coast_Chl_SW1\", resample=\"oversampled\")[0].size)\n",
+    "print(usgs_lib.load(\"Seawater_Coast_Chl_SW1\", resample=\"cvASD\")[0].size)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:54:39.258233397Z",
-     "start_time": "2023-07-20T22:54:38.079133994Z"
+     "end_time": "2023-07-21T01:40:54.506216015Z",
+     "start_time": "2023-07-21T01:40:52.298878096Z"
     }
    }
   },
@@ -215,7 +217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<spectral.io.envi.SpectralLibrary object at 0x7f9904fde700>\n",
+      "<spectral.io.envi.SpectralLibrary object at 0x7f5f51fdc400>\n",
       "[0.02851183 0.02851183 0.02851183 0.02851183 0.02851183]\n",
       "['Seawater_Coast_Chl_SW1']\n",
       "[0.2051, 0.21310002, 0.2211, 0.2291, 0.2361]\n",
@@ -225,7 +227,7 @@
     }
    ],
    "source": [
-    "spec_lib = usgs_lib.load(\"Seawater_Coast_Chl_SW1\", resampling=\"measured\", format=\"spectral\")\n",
+    "spec_lib = usgs_lib.load(\"Seawater_Coast_Chl_SW1\", resample=\"measured\", format=\"spectral\")\n",
     "\n",
     "print(spec_lib)\n",
     "print(spec_lib.spectra.flat[:5])\n",
@@ -237,8 +239,47 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T22:54:40.074860570Z",
-     "start_time": "2023-07-20T22:54:39.258765835Z"
+     "end_time": "2023-07-21T01:40:55.243505513Z",
+     "start_time": "2023-07-21T01:40:54.507499726Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Load spectrum resampled to particular wavelengths:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.03251023 0.02163642 0.01975156 0.0193604  0.0190043  0.01862108\n",
+      " 0.01811341 0.01717422 0.01577636 0.01130907]\n",
+      "[0.5        0.72222222 0.94444444 1.16666667 1.38888889 1.61111111\n",
+      " 1.83333333 2.05555556 2.27777778 2.5       ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "wavelengths = np.linspace(0.5, 2.5, 10)\n",
+    "\n",
+    "spec = usgs_lib.load(\"Seawater_Coast_Chl_SW1\", resample=wavelengths)\n",
+    "print(spec.spectrum)\n",
+    "print(spec.wavelengths)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-21T01:40:55.995750526Z",
+     "start_time": "2023-07-21T01:40:55.244368689Z"
     }
    }
   }
